@@ -1561,6 +1561,11 @@ def test_autodoc_typed_instance_variables(app):
         '.. py:module:: target.typed_vars',
         '',
         '',
+        '.. py:attribute:: Alias',
+        '   :module: target.typed_vars',
+        '',
+        '   alias of :class:`target.typed_vars.Class`',
+        '',
         '.. py:class:: Class()',
         '   :module: target.typed_vars',
         '',
